# screento_maker_cli_rs

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/utils/: image_ut.rs  mod.rs  parse.rs  paths.rs  screenton.rs
