[package]
name = "screento_maker_cli_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.0"
ndarray ="0.15.6"
mime_guess = "2.0.4"
indicatif = "0.17.8"
rayon = "1.9.0"
getopts = "0.2.21"
